--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full font-sans text-[100%] leading-normal font-normal text-slate-900 bg-slate-50">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naptimer</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <body class="h-full">
+    <div id="app" class="h-full"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
