--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naptimer</title>
   </head>
-  <body class="h-full bg-white">
+  <body class="h-full bg-gray-100">
     <div id="app" class="h-full"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
