--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="h-full font-sans text-[100%] leading-normal font-normal text-slate-900 bg-slate-50">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naptimer</title>
   </head>
